Add HMR and ES Lint/Prettier. Created really wonky flower grid.

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-  <script src="build/bundle.min.js" ></script>
-</head>
-<body>
-  <div id="mount"></div>
-</body>
+  <head>
+    <link rel="stylesheet" href="main.css" />
+    <script src="build/bundle.min.js" ></script>
+  </head>
+  <body>
+    <div id="mount"></div>
+  </body>
 </html>
