--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="main.css" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <script src="build/bundle.min.js" ></script>
   </head>
   <body>
