--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
-<head>
-  <script src="build/bundle.min.js" ></script>
-</head>
-<body>
-  <div id="mount"></div>
-</body>
+  <head>
+    <link rel="stylesheet" href="main.css" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <script src="build/bundle.min.js" ></script>
+  </head>
+  <body>
+    <div id="mount"></div>
+  </body>
 </html>
